add zombified piglin.